{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 26,
  "lineage": "8a1a338c-0022-674c-5bd0-7b7e2a0ef3bb",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:security-group/sg-0038a8624e3c81440",
            "description": "Security group for ECS Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0038a8624e3c81440",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "astrokiran-prod-ecs-sg",
            "name_prefix": "",
            "owner_id": "135808951138",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "astrokiran-prod-ecs-sg"
            },
            "tags_all": {
              "Name": "astrokiran-prod-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0babc2729a6accb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:internet-gateway/igw-087c0f18ebd896e14",
            "id": "igw-087c0f18ebd896e14",
            "owner_id": "135808951138",
            "tags": {
              "Name": "astrokiran-prod-igw"
            },
            "tags_all": {
              "Name": "astrokiran-prod-igw"
            },
            "vpc_id": "vpc-0babc2729a6accb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-087c0f18ebd896e14",
            "id": "r-rtb-0493902752ff2a7f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0493902752ff2a7f8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:route-table/rtb-0493902752ff2a7f8",
            "id": "rtb-0493902752ff2a7f8",
            "owner_id": "135808951138",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087c0f18ebd896e14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "astrokiran-prod-public-rt"
            },
            "tags_all": {
              "Name": "astrokiran-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0babc2729a6accb53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c68da361ddeeca84",
            "route_table_id": "rtb-0493902752ff2a7f8",
            "subnet_id": "subnet-0ca410ecdd5030759"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0997631b20ba47e19",
            "route_table_id": "rtb-0493902752ff2a7f8",
            "subnet_id": "subnet-0f285b92619293678"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:subnet/subnet-0ca410ecdd5030759",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca410ecdd5030759",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135808951138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astrokiran-prod-public-subnet-0"
            },
            "tags_all": {
              "Name": "astrokiran-prod-public-subnet-0"
            },
            "vpc_id": "vpc-0babc2729a6accb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:subnet/subnet-0f285b92619293678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f285b92619293678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135808951138",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "astrokiran-prod-public-subnet-1"
            },
            "tags_all": {
              "Name": "astrokiran-prod-public-subnet-1"
            },
            "vpc_id": "vpc-0babc2729a6accb53"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:135808951138:vpc/vpc-0babc2729a6accb53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d926e819a8341627",
            "default_route_table_id": "rtb-0d314e02b98cfdc3a",
            "default_security_group_id": "sg-0b866940c0520fbb2",
            "dhcp_options_id": "dopt-0c38487ffa2d7e02a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0babc2729a6accb53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d314e02b98cfdc3a",
            "owner_id": "135808951138",
            "tags": {
              "Name": "vpc-astrokiran-prod"
            },
            "tags_all": {
              "Name": "vpc-astrokiran-prod"
            }
          }
        }
      ]
    }
  ]
}